# mojito-webserver

./: CodersGuidelines.md  Compiling.md  Makefile  Makefile.am  Makefile.flags  Overview.md  ProjectHome.md  StaticVsDynamic.md  bootstrap  cgi.c  config.disml  config.ini  config_manager.c  config_parse.c  config_parse.h  config_type.h  configure.ac  configure.in  daemon.c  daemon.h  defaults.h  filter_manag.c  filter_manag.h  filter_manager.c  filter_manager.h  fparams.c  fparams.h  header_w_quality.c  main.c  mime.c  mime.h  module.c  module.h  module_loader.c  modules.c  modules.h  plist.c  plist.h  request.c  request.h  (+13 more)
branches/: make_pkg.sh
branches/release-0.1/: Makefile  compression.c  compression.h  config.ini  daemon.h  fileutils.c  filter.c  filter.h  main.c  module.c  request.h  socket.c
branches/release-0.1/cache/: cache.h
branches/release-0.1/filter/: Makefile
branches/release-0.2/: Makefile.flags  date.c  date.h  dirlist.c  fileutils.h  filter_manag.h  fparams.c  header_w_quality.c  logger.c  main.c  mime.c  mime.h  module_loader.c  module_loader.h  plist.h  response.h  socket.h
branches/release-0.2/modules/: Makefile  modules.c
branches/working-0.2/: Makefile  Makefile.flags  cgi.c  cgi.h  config.ini  daemon.c  daemon.h  defines.h  filter_manag.c  filter_manag.h  fparams.c  fparams.h  logger.c  logger.h  main.c  module.c  module.h  module_loader.c  module_loader.h  request.c  request.h  resp_headers.c  resp_headers.h  response.c  response.h  socket.c  todo
branches/working-0.3/: Makefile.am  configure.in
branches/working-0.3/http/: Makefile.am  mjt_headerwquality.c  mjt_headerwquality.h  mjt_headerwquality.lo  mjt_httprequest.h  mjt_httprequest.lo
branches/working-0.3/include/: mjt_compat.h  mjt_compilers.h  mjt_types.h
branches/working-0.3/lib/: Makefile.am  Makefile.in  mjt_alloc.c  mjt_alloc.h  mjt_daemon.c  mjt_daemon.h  mjt_iniparse.c  mjt_iniparse.h  mjt_kvlist.c  mjt_logger.c  mjt_logger.h  mjt_mime.h  mjt_rw.c  mjt_rw.h
branches/working-0.3/mojito/: config.ini  fparams.h  main.c
branches/working-0.3/net/: mjt_server.h  mjt_socket.c
branches/working-0.3/replace/: Makefile.am  basename.c  snprintf.c  strerror.c  vasprintf.c  vsnprintf.c
branches/working-0.4/: config_manager.c  config_manager.h  config_parse.c  config_parse.h  defaults.h  filter_manager.c  filter_manager.h  header_w_quality.c  header_w_quality.h  main.c  module_loader.c  module_loader.h  modules.c  modules.h  request.c  request.h  request_parse.c  request_parse.h  resp_headers.c  resp_headers.h  response.c  response.h  response_type.h  socket_unit.c  socket_unit.h  socket_unit_manager.c  types.h  unittest.c
branches/working-0.5/: Makefile.am  appunti.c  config.disml  config_type.h  configure.ac  defaults.h  filter_manager.c  header_w_quality.h  main.c  modules.c  modules.h  request.h  request_parse.c  request_parse.h  resp_headers.c  resp_headers.h  response.c  response.h  response_type.h  scheduler.c  scheduler.h  socket_unit.h  todo
branches/working-0.5/cfg/: config.disml
branches/working-0.5/common_src/: Makefile.am  env_setter.c  env_setter.h  resp_headers.c
branches/working-0.5/modules/: Makefile.am
branches/working-0.5/modules/mod_cgi/: Makefile.in  cgi_run.c  mod_cgi.c
branches/working-0.5/modules/mod_deflate/: Makefile.am  mod_deflate.c
branches/working-0.5/modules/mod_gzip/: mod_gzip.c
branches/working-0.5/modules/mod_identity/: Makefile.am  mod_identity.c
branches/working-0.5/src/: Makefile.am  config_manager.c  config_parse.c  config_type.h  defaults.h  filter_manager.c  header_w_quality.c  lptask.h  main.c  module_loader.c  module_loader.h  modules.c  modules.h  request.c  request.h  request_parse.c  resp_headers.c  response.c  response.h  response_type.h  scheduler.c  scheduler.h  scheduler_epoll.c  scheduler_fake.h  socket_unit.c  types.h  utils.h
cache/: cache.c  cache.h
cache/dlloader/: cache_loader.c
cache/shm/: Makefile  cache.c
cfg/: config.disml
common_src/: Makefile.am  resp_headers.c  resp_headers.h
config/: sys_errlist.m4
filter/: filter.c  filter.h
filter/deflate/: Makefile  filter.c
filter/gzip/: Makefile
filter/identity/: Makefile
http/: mjt_httprequest.c
include/: mjt_compat.h  mjt_types.h
lib/: mjt_alloc.h  mjt_daemon.c  mjt_daemon.h  mjt_date.c  mjt_date.h  mjt_iniparse.h  mjt_kvlist.c  mjt_kvlist.h  mjt_logger.c  mjt_mime.c  mjt_rw.c  mjt_rw.h
logger/: Makefile  logger.c  logger.h
logger/dlloader/: logger_loader.c
logger/std/: Makefile  logger.c
modules/: Makefile.am
modules/mod_cacheshm/: cache.c
modules/mod_cgi/: Makefile.am  Makefile.in  cgi.h  cgi_run.c  cgi_run.h  mod_cgi.c
modules/mod_deflate/: Makefile.am  mod_deflate.c
modules/mod_fastcgi/: proto_fcgi.h
modules/mod_gzip/: Makefile.am  mod_gzip.c
modules/mod_identity/: Makefile.am  mod_identity.c
mojito/: Makefile.am  fparams.c  fparams.h
net/: Makefile.am  Makefile.in  mjt_server.c  mjt_socket.h
prj/linux/: Makefile  Makefile.vars  dbg_mojito.sh  run_mojito.sh
prj/win32/: mojito.vcproj
replace/: Makefile.in  strdup.c  strncasecmp.c  strptime.c
src/: Makefile.am  config_manager.c  config_manager.h  config_parse.c  config_type.h  defaults.h  filter_manager.c  header_codes.c  header_codes.h  header_w_quality.c  logger.c  logger.h  lptask.c  main.c  mime.c  module_loader.c  module_loader.h  modules.c  request.c  request.h  request_parse.c  request_parse.h  response.c  response_type.h  scheduler.h  scheduler_epoll.c  scheduler_epoll.h  scheduler_fake.c  scheduler_fake.h  socket_unit.h  utils.h
trunk/: Makefile  config.ini  daemon.c  daemon.h  filter_manag.c  fparams.c  fparams.h  header_w_quality.h  main.c  module.c  module.h  plist.c  request.c  request.h  resp_headers.c  response.c  socket.h  todo
trunk/cache/: cache.h
trunk/filter/: filter.h
trunk/logger/: logger.c  logger.h
trunk/modules/: modules.h
wiki/: CodersGuidelines.wiki  Compiling.wiki  Overview.wiki  StaticVsDynamic.wiki
wiki/design_attachments/: interface_cache.dia  interface_logger.dia  module_interface.dia  static_vs_dynamic.dia
(+84 files in other folders)
