bin_PROGRAMS = mojito
mojito_SOURCES =    config_manager.c main.c request.c \
                    config_parse.c mime.c request_parse.c socket_unit.c \
                    filter_manager.c module_loader.c resp_headers.c \
                    header_w_quality.c modules.c response.c \
					scheduler_epoll.c scheduler_fake.c
