bin_PROGRAMS = mojito
mojito_SOURCES =    config_manager.c main.c request.c \
                    config_parse.c mime.c request_parse.c socket_unit.c \
                    filter_manager.c module_loader.c header_codes.c \
                    header_w_quality.c modules.c response.c \
					scheduler_epoll.c scheduler_fake.c
mojito_LDADD = ../common_src/libcommon_src.la
